style: fixed icon display on small screens

--- a/src/browser/screens/Roles.styl
+++ b/src/browser/screens/Roles.styl
@@ -116,14 +116,41 @@
       li:nth-child(3)
         order 2
 
+//@media (max-width: 480px),
+//(max-height: 520px) and (max-width: 767px)
+//  .roles-screen
+//    ul
+//      justify-content center
+//      li
+//        height auto
+//        img
+//          display none
+//      li:nth-child(2)
+//        height auto
+
+
 @media (max-width: 480px),
 (max-height: 520px) and (max-width: 767px)
   .roles-screen
     ul
       justify-content center
+      flex-direction column
       li
-        height auto
+        margin 20px 0
+        width 100%
+        height 25%
+
         img
-          display none
+          order 1
+
+      li:nth-child(1)
+        order 1
+
       li:nth-child(2)
-        height auto
+        order 0
+        height 25%
+        p
+          order 0
+
+      li:nth-child(3)
+        order 2
